Implementation of Independent Component Analysis.

--- a/src/csuCommon/csuCommon.vcproj
+++ b/src/csuCommon/csuCommon.vcproj
@@ -194,6 +194,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\csuFaceIdEval\csuSubspaceIndependent.c"
+				>
+			</File>
+			<File
+				RelativePath="..\csuFaceIdEval\csuSubspaceIndependent.h"
+				>
+			</File>
+			<File
 				RelativePath="..\csuFaceIdEval\csuSubspaceLaplacian.c"
 				>
 			</File>
